# Unified_Optimization_and_SciML

./: .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  TESTING.md  USAGE.md  pyproject.toml  test_basic.py
examples/: APPLICATIONS.md  COMPARISON.md  GETTING_STARTED.md  README.md  __init__.py  adam_optimizer.py  adversarial_robust_training.py  bilevel_optimization.py  composable_optimization.py  conjugate_gradient.py  implicit_neural_layer.py  large_scale_inverse_problem.py  meta_learning_maml.py  optimal_control_pde_constrained.py  physics_informed_neural_networks.py  simple_gradient_descent.py
unified_opt/: __init__.py
unified_opt/algorithms/: __init__.py  operators.py
unified_opt/core/: __init__.py  curvature.py  geometry.py  linear_solver.py  objective.py  program.py  state.py  stopping_rule.py  update_rule.py
unified_opt/differentiable/: __init__.py  implicit.py
unified_opt/optimizers/: __init__.py  adam.py  base.py  cg.py  gradient_descent.py  pcg.py  sgd.py
unified_opt/preconditioners/: __init__.py  base.py  diagonal.py  identity.py  jacobi.py
unified_opt/stopping/: __init__.py  composite.py  gradient_norm.py  max_iterations.py  relative_decrease.py
